# Distributed-Parallel-Computing

./: .gitignore  CMakeLists.txt  Project.sln  Project.vcxproj  Project.vcxproj.filters  README.md  common.h  cpu_ops.h  cpu_sort.h  cuda_ops.cu  master.cpp  master_CUDA.cpp  net.cpp  net.h  worker.cpp
for_CUDA/: cuda_ops.cuh  worker_CUDA.cpp
